# azurescens

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
android/: build-and-install
docs/: algorithm.md  android.md  hacking.md
src/: fps.rs  main.rs  params.rs  screenshot.rs  shader_loader.rs
src/shaders/: blit.glsl  feedback.glsl  vertex.glsl
tests/: validate-shaders.rs
